# sentryshark

./: CHANGELOG.md  Cargo.toml  Dockerfile  PLAN.md  README.md  config.example.toml  docker-compose.yml
.omo/run-continuation/: ses_16824d686ffeW4n28XHLql3zH9.json
benches/: review_latency.rs
src/: auto_approve.rs  cache.rs  config.rs  dashboard.rs  db.rs  diff_filter.rs  github.rs  gitlab.rs  inline_comments.rs  lib.rs  llm.rs  main.rs  metrics.rs  queue.rs  rate_limit.rs  retry.rs  review.rs  rule_engine.rs  shutdown.rs  templates.rs
tests/: e2e_test.rs  security_tests.rs  webhook_tests.rs
