[package]
name = "sentryshark"
version = "0.1.0"
edition = "2021"
authors = ["synthalorian <synthalorian@gmail.com>"]
description = "Self-hosted AI code review bot using local LLMs"
license = "MIT"
repository = "https://github.com/synthalorian/sentryshark"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.9"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
