[package]
name = "sentryshark"
version = "1.0.0"
edition = "2021"
authors = ["synthalorian <synthalorian@gmail.com>"]
description = "Self-hosted AI code review bot using local LLMs"
license = "MIT"
repository = "https://github.com/synthalorian/sentryshark"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.9"
regex = "1.10"
jsonwebtoken = "9"
rsa = "0.9"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
tokio-rusqlite = "0.5"
chrono = { version = "0.4", features = ["serde"] }
minijinja = "1.0"
serde_yaml = "0.9"
fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "review_latency"
harness = false
